src/objects/LAB_MT1_Child_1__c.object
<CustomObject>
    <fields>
        <fullName>LAB_Mo_Tester_1__c</fullName>
        <label>Mo Tester 1</label>
        <referenceTo>LAB_Mo_Tester_1__c</referenceTo>
        <relationshipLabel>MT1 Child1s</relationshipLabel>
        <relationshipName>MT1_Child1s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT1_C1_Date_1__c</fullName>
        <label>MT1 C1 Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT1_C1_Number_1__c</fullName>
        <label>MT1 C1 Number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT1_C1_Picklist_1__c</fullName>
        <label>MT1 C1 Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>MT1 C1 P1 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 C1 P1 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 C1 P1 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT1 C1 P1 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT1_C1_Roll_Up_1_GC1_Count__c</fullName>
        <label>MT1 C1 Roll Up 1 GC1 Count</label>
        <summaryForeignKey>LAB_MT1_Grandchild_1__c.LAB_MT1_Child_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MT1_C1_Text_1__c</fullName>
        <label>MT1 C1 Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MT1 Child 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MT1 Child 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MT1 Child1s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>